# Archo

./: .gitIgnore  .gitignore  CMakeLists.txt  README.md  imgui.ini  runSetup.bat  runSetup2.bat
Blender/: Archo.blend  Archo.blend1
DemonRenderer/include/: DemonRenderer.hpp
DemonRenderer/include/assets/: managedTexture.hpp  mesh.hpp  shader.hpp  texture.hpp  textureUnitManager.hpp
DemonRenderer/include/buffers/: FBO.hpp  UBO.hpp  UBOlayout.hpp  UBOmanager.hpp  VAO.hpp  VBO.hpp  VBOlayout.hpp
DemonRenderer/include/components/: collidable.hpp  order.hpp  render.hpp  script.hpp  transform.hpp
DemonRenderer/include/core/: application.hpp  layer.hpp  physics.hpp  planeSweep.hpp  randomiser.hpp  saving.hpp  timer.hpp
DemonRenderer/include/rendering/: camera.hpp  computePass.hpp  depthOnlyPass.hpp  lights.hpp  material.hpp  renderPass.hpp  renderer.hpp  scene.hpp  uniformDataTypes.hpp
DemonRenderer/include/sound/: soundManager.hpp
DemonRenderer/include/windows/: GLFWWindowImpl.hpp  window.hpp
DemonRenderer/src/assets/: shader.cpp  texture.cpp
DemonRenderer/src/buffers/: FBO.cpp  UBO.cpp  UBOmanager.cpp
DemonRenderer/src/core/: application.cpp  physics.cpp  planeSweep.cpp  saving.cpp
DemonRenderer/src/rendering/: depthOnlyPass.cpp  material.cpp  renderPass.cpp  renderer.cpp
DemonRenderer/src/sound/: soundManager.cpp
DemonRenderer/src/windows/: GLFWWindowImpl.cpp  GLFW_GL_GC.cpp
Editor/: CodeMap1D.dgml  CodeMap1F.dgml
application/include/: GAMR3531.hpp  LOD.hpp  MainScene.hpp  ui.hpp
application/scripts/: RelicFunctions.cpp  RelicFunctions.hpp
application/scripts/include/: button.hpp  controller.hpp  rotation.hpp
application/scripts/src/: button.cpp  controller.cpp  rotation.cpp
application/src/: GAMR3531.cpp  LOD.cpp  MainScene.cpp  app.cpp  ui.cpp
application/src/ImGui/: bloomPanel.cpp
assets/models/asteroid1/: asteroidLow.mtl
assets/models/asteroid2/: asteroidLow.mtl
assets/models/asteroid3/: asteroidLow.mtl
assets/models/asteroid4/: asteroidLow.mtl
assets/shaders/: AAFrag.glsl  BackGroundFrag.glsl  FinalFrag.glsl  FinalVert.glsl  InvButRelicFrag.glsl  MainMenuFrag.glsl  ParticleFrag.glsl  ParticleVert.glsl  PauseMenuFrag.glsl  QuadFrag.glsl  QuadVert.glsl  RelicFrag.glsl  RelicVert.glsl  SceneryFrag.glsl  SceneryVert.glsl  compute_CDMnormals.glsl  compute_FindSeedingLocations.glsl  compute_Generate_Type1.glsl  compute_Ground.glsl  compute_Particles.glsl  floorTCS.glsl  floorTES.glsl
assets/shaders/Depth/: Vert.glsl
assets/shaders/Depth Dynamic LOD/: Frag.glsl  Geo.glsl  TCS.glsl  TES.glsl  Vertex.glsl
assets/shaders/PBR/: pbrFrag.glsl  pbrFragEmissive.glsl  pbrVertex.glsl
assets/shaders/PBR Dynamic LOD/: pbrFrag.glsl  pbrGeo.glsl  pbrTCS.glsl  pbrTES.glsl  pbrVertex.glsl
assets/shaders/Particles/: ParticleFrag.glsl  ParticleGeo.glsl
assets/shaders/UI/: ButtonFrag.glsl  ButtonVert.glsl  CircleVert.glsl  InventoryButtonFrag.glsl  InventoryEquipFrag.glsl  InventoryItemsFrag.glsl  QuadVert.glsl
saves/: Settings.json
